<resources>
    <string name="app_name">SolutionX</string>

    <string name="please_wait">Please Wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="login_client">LOGIN</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name_Client">First name</string>
    <string name="hint_last_name_Client">Last name</string>
    <string name="et_hint_confirm_password_Client">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition"><![CDATA[I Agree To The Terms & Condition]]></string>
    <string name="btn_lbl_register">Register</string>
    <string name="login"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="unsupported_type">Unsupported type…</string>


    <string name="un_supported_type" translatable="false">unSupportedError</string>
    <string name="James" translatable="false">James</string>
    <string name="Robert" translatable="false">Robert</string>
    <string name="John" translatable="false">John</string>
    <string name="Michael" translatable="false">Michael</string>
    <string name="David" translatable="false">David</string>
    <string name="William" translatable="false">William</string>
    <string name="Richard" translatable="false">Richard</string>
    <string name="Joseph" translatable="false">Joseph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="not_found">Not Found</string>
    <string name="resource_not_found">Resource not found</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="err_msg_enter_email">Please Enter phone</string>
    <string name="err_msg_enter_password">Please Enter password</string>
    <string name="err_msg_enter_countrycode">Please Enter Country Code</string>
    <string name="internal_server_error">"Server Error "</string>

</resources>